Started implementing web API: * Renamed Parser and Scanner to CodeParser and CodeScanner * Made scanner and parser async * Added an embedded RavenDB instance * Added an API for compiling code * Started adding the command execution infrastructure

--- a/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -15,4 +15,12 @@
     <PackageReference Include="RavenDB.Embedded" Version="4.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NaoBlocks.Parser\NaoBlocks.Parser.csproj" />
+  </ItemGroup>
+
 </Project>
