Started adding unit tests for web project.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ NaoBlocks.Parser.Tests/bin/**/*.*
 NaoBlocks.Parser.Tests/obj/**/*.*
 NaoBlocks.Web/bin/**/*.*
 NaoBlocks.Web/obj/**/*.*
+NaoBlocks.Web.Tests/bin/**/*.*
+NaoBlocks.Web.Tests/obj/**/*.*
