--- a/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
+++ b/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="Moq" Version="4.13.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\NaoBlocks.Parser\NaoBlocks.Parser.csproj" />
+    <ProjectReference Include="..\NaoBlocks.Web\NaoBlocks.Web.csproj" />
   </ItemGroup>
 
 </Project>
