Added a mocking framework for RavenDB.

--- a/NaoBlocks.Core.Tests/NaoBlocks.Core.Tests.csproj
+++ b/NaoBlocks.Core.Tests/NaoBlocks.Core.Tests.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NaoBlocks.Core\NaoBlocks.Core.csproj" />
+    <ProjectReference Include="..\RavenDB.Mocks\RavenDB.Mocks.csproj" />
   </ItemGroup>
 
 </Project>
