Added unit tests for retrieving a robot.

--- a/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
+++ b/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\NaoBlocks.Web\NaoBlocks.Web.csproj" />
+    <ProjectReference Include="..\RavenDB.Mocks\RavenDB.Mocks.csproj" />
   </ItemGroup>
 
 </Project>
