--- a/NaoBlocks.Web/appsettings.json
+++ b/NaoBlocks.Web/appsettings.json
@@ -8,5 +8,6 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
+    "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ"
   }
 }
