Implemented saving to local machine.

--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@clr/ui": "2.3.4",
     "@webcomponents/custom-elements": "^1.0.0",
     "blockly": "git://github.com/google/blockly.git#3.20191014.4",
+    "file-saver": "^2.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -33,9 +34,10 @@
     "@angular/cli": "~8.3.21",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
