--- a/NaoBlocks.Web/appsettings.json
+++ b/NaoBlocks.Web/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "AppSettings": {
-    "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ"
+    "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ",
+    "DatabaseOptions": {
+      "FrameworkVersion": "2.2.8",
+      "DotNetPath": "C:\\Program Files\\dotnet\\dotnet"
+    }
   }
 }
