Added a Nao header icon.

--- a/client/angular.json
+++ b/client/angular.json
@@ -25,6 +25,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
+              "src/assets/nao.svg",
               "src/assets"
             ],
             "styles": [
