--- a/NaoBlocks.Web/Properties/launchSettings.json
+++ b/NaoBlocks.Web/Properties/launchSettings.json
@@ -20,10 +20,11 @@
     "NaoBlocks.Web": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "http://192.168.0.13:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000;http://192.168.0.13:5000"
     }
   }
 }
