--- a/NaoBlocks.Web/appsettings.json
+++ b/NaoBlocks.Web/appsettings.json
@@ -6,12 +6,16 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
   "AppSettings": {
     "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ",
     "DatabaseOptions": {
       "FrameworkVersion": "3.1.3",
-      "DotNetPath": "C:\\Program Files\\dotnet\\dotnet"
+      "DotNetPath": "C:\\Program Files\\dotnet\\dotnet",
+      "UseEmbedded": false,
+      "Certificate": "free.iot-testbed.client.certificate.pfx",
+      "Urls": [
+        "https://a.free.iot-testbed.ravendb.cloud"
+      ]
     }
   }
 }
