Upgraded to Angular 10.

--- a/NaoBlocks.Web/appsettings.json
+++ b/NaoBlocks.Web/appsettings.json
@@ -9,9 +9,9 @@
   "AppSettings": {
     "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ",
     "DatabaseOptions": {
-      "FrameworkVersion": "3.1.3",
+      "FrameworkVersion": "3.1.6",
       "DotNetPath": "C:\\Program Files\\dotnet\\dotnet",
-      "UseEmbedded": false,
+      "UseEmbedded": true,
       "Certificate": "free.iot-testbed.client.certificate.pfx",
       "Urls": [
         "https://a.free.iot-testbed.ravendb.cloud"
