--- a/NaoBlocks.Core/NaoBlocks.Core.csproj
+++ b/NaoBlocks.Core/NaoBlocks.Core.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.8" />
     <PackageReference Include="RavenDB.Client" Version="4.2.102" />
   </ItemGroup>
 
