--- a/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -22,6 +22,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="QRCoder" Version="1.3.9" />
     <PackageReference Include="RavenDB.Embedded" Version="4.2.102" />
   </ItemGroup>
 
