Added function definitions: * minor bug fixes on the Nao code * added function definition to the engine * added function execution to the engine

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
                 "--test",
                 "--ignoreSSL"
             ],
-            "cwd": "${workspaceFolder}/robot"
+            "cwd": "${workspaceFolder}/robot/Nao"
         }
     ]
 }
