Added base script for an Aruco client.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ LogFiles/*.txt
 NaoBlocks.Web/Properties/PublishProfiles/* - Web Deploy.pubxml
 NaoBlocks.Web/Properties/PublishProfiles/* - Web Deploy.pubxml.user
 robot/Nao/launch/**/*.*
+clients/**/*.pyc
