--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Python27\\python.exe",
+    "python.pythonPath": "C:\\Users\\csut017\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
     "cmake.configureOnOpen": false
 }
