--- a/NaoBlocks.Web/appsettings.json
+++ b/NaoBlocks.Web/appsettings.json
@@ -8,8 +8,9 @@
   },
   "AppSettings": {
     "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ",
+    "InternalAddress": "localhost:5001",
     "DatabaseOptions": {
-      "FrameworkVersion": "3.1.14",
+      "FrameworkVersion": "3.1.20",
       "DotNetPath": "C:\\Program Files\\dotnet\\dotnet",
       "UseEmbedded": true,
       "Certificate": "free.iot-testbed.client.certificate.pfx",
