--- a/NaoBlocks.Parser/NaoBlocks.Parser.csproj
+++ b/NaoBlocks.Parser/NaoBlocks.Parser.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NaoBlocks.Common\NaoBlocks.Common.csproj" />
+  </ItemGroup>
+
 </Project>
