Added user commands and restoring commands

--- a/Server/NaoBlocks.Engine/NaoBlocks.Engine.csproj
+++ b/Server/NaoBlocks.Engine/NaoBlocks.Engine.csproj
@@ -7,8 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="RavenDB.Client" Version="5.2.4" />
   </ItemGroup>
 
   <ItemGroup>
