--- a/Server/NaoBlocks.Web/appsettings.json
+++ b/Server/NaoBlocks.Web/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "Database": {
     "UseEmbedded": true
+  },
+  "Security": {
+    "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ"
   }
 }
