--- a/Clients/Angular/package.json
+++ b/Clients/Angular/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@types/file-saver": "^2.0.4",
+    "file-saver": "^2.0.5",
     "pdfmake": "^0.2.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
