--- a/Clients/Angular/angular.json
+++ b/Clients/Angular/angular.json
@@ -56,7 +56,11 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/blockly/blockly_compressed.js",
+              "node_modules/blockly/blocks_compressed.js",
+              "node_modules/blockly/msg/js/en.js"              
+            ]
           },
           "configurations": {
             "production": {
