Started work on UI definitions

--- a/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -30,6 +30,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
+		<ProjectReference Include="..\Definitions\NaoBlocks.Definitions.Angular\NaoBlocks.Definitions.Angular.csproj" />
 		<ProjectReference Include="..\NaoBlocks.Engine\NaoBlocks.Engine.csproj" />
 	</ItemGroup>
 
