--- a/Tests/NaoBlocks.Definitions.Angular.Tests/NaoBlocks.Definitions.Angular.Tests.csproj
+++ b/Tests/NaoBlocks.Definitions.Angular.Tests/NaoBlocks.Definitions.Angular.Tests.csproj
@@ -8,10 +8,26 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="RavenDB.TestDriver" Version="5.3.1" />
+    <None Remove="expected_conversions.txt" />
+    <None Remove="expected_language.txt" />
+    <None Remove="expected_multiple_block_definition.txt" />
+    <None Remove="expected_single_block_definition.txt" />
+    <None Remove="test.template" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="expected_conversions.txt" />
+    <EmbeddedResource Include="expected_language.txt" />
+    <EmbeddedResource Include="expected_multiple_block_definition.txt" />
+    <EmbeddedResource Include="expected_single_block_definition.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="test.template" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,8 +42,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
     <ProjectReference Include="..\..\Server\Definitions\NaoBlocks.Definitions.Angular\NaoBlocks.Definitions.Angular.csproj" />
-    <ProjectReference Include="..\..\Server\NaoBlocks.Engine\NaoBlocks.Engine.csproj" />
-    <ProjectReference Include="..\..\Server\NaoBlocks.Web\NaoBlocks.Web.csproj" />
   </ItemGroup>
 
 </Project>
