Mork work on UI definitions: * Implemented Validation for Angular UI * Added POST and DELETE to the controller * Fixed an error in the language template * Added some HTTP tests

--- a/Tests/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
+++ b/Tests/NaoBlocks.Web.Tests/NaoBlocks.Web.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
+    <ProjectReference Include="..\..\Server\Definitions\NaoBlocks.Definitions.Angular\NaoBlocks.Definitions.Angular.csproj" />
     <ProjectReference Include="..\..\Server\NaoBlocks.Engine\NaoBlocks.Engine.csproj" />
     <ProjectReference Include="..\..\Server\NaoBlocks.Web\NaoBlocks.Web.csproj" />
   </ItemGroup>
