Split nodes and blocks in the Angular definition

--- a/Server/Definitions/NaoBlocks.Definitions.Angular/conversions.template
+++ b/Server/Definitions/NaoBlocks.Definitions.Angular/conversions.template
@@ -1,7 +1,7 @@
 ﻿export class AstConversionDefinitions {
     constructor() {
-        this.xmlBlocks = {
-            <[[blocks]]>
+        this.astNodes = {
+            <[[nodes]]>
         };
     }
 }
