--- a/Server/Definitions/NaoBlocks.Definitions.Angular/NaoBlocks.Definitions.Angular.csproj
+++ b/Server/Definitions/NaoBlocks.Definitions.Angular/NaoBlocks.Definitions.Angular.csproj
@@ -7,6 +7,14 @@
 	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="block_definitions.template" />
     <None Remove="conversions.template" />
