Added additional UI definition validations: * Checks the block definition is valid JSON or a keyword * Set the type in the block definition to the block name * Check the block generator is valid JavaScript * Check the node converter is valid JavaScript

--- a/Server/Definitions/NaoBlocks.Definitions.Angular/NaoBlocks.Definitions.Angular.csproj
+++ b/Server/Definitions/NaoBlocks.Definitions.Angular/NaoBlocks.Definitions.Angular.csproj
@@ -28,6 +28,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Esprima" Version="2.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
     <ProjectReference Include="..\..\NaoBlocks.Engine\NaoBlocks.Engine.csproj" />
   </ItemGroup>
