Execute program fixes: * Ignore cancellation requests when the robot is stopped * Added additional logging * Allow skipping conversation checks when adding a robot log * Allow conversations to be for robots as well as users * Fixed some broken unit tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,13 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "args": [
+                "--test",
+                "--ignoreSSL",
+                "--server=localhost:5001",
+                "--password=one"
+            ]
         }
     ]
 }
