Ported tangible editor.

--- a/Clients/Angular/angular.json
+++ b/Clients/Angular/angular.json
@@ -59,7 +59,8 @@
             "scripts": [
               "node_modules/blockly/blockly_compressed.js",
               "node_modules/blockly/blocks_compressed.js",
-              "node_modules/blockly/msg/js/en.js"              
+              "node_modules/blockly/msg/js/en.js",
+              "src/assets/topcodes.js"
             ]
           },
           "configurations": {
