Terminal client: started on version instruction * Validation implemented * Improved the help format * Added arg parsing to InstructionBase

--- a/Clients/NaoBlocks.Client.Terminal/NaoBlocks.Client.Terminal.csproj
+++ b/Clients/NaoBlocks.Client.Terminal/NaoBlocks.Client.Terminal.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <AssemblyName>NaoBlocks</AssemblyName>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
