--- a/Server/NaoBlocks.Web/Properties/launchSettings.json
+++ b/Server/NaoBlocks.Web/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://192.168.0.10:5000",
       "dotnetRunMessages": true
     },
     "IIS Express": {
