--- a/Clients/Angular/package.json
+++ b/Clients/Angular/package.json
@@ -24,6 +24,8 @@
     "@types/file-saver": "^2.0.4",
     "blockly": "github:google/blockly#7.20211209.2",
     "file-saver": "^2.0.5",
+    "install": "^0.13.0",
+    "npm": "^8.18.0",
     "pdfmake": "^0.2.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
