More work on the robot state

--- a/Common/NaoBlocks.RobotState/NaoBlocks.RobotState.csproj
+++ b/Common/NaoBlocks.RobotState/NaoBlocks.RobotState.csproj
@@ -17,6 +17,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\NaoBlocks.Common\NaoBlocks.Common.csproj" />
+	  <ProjectReference Include="..\NaoBlocks.Parser\NaoBlocks.Parser.csproj" />
 	</ItemGroup>
 
 </Project>
