Implemented starting the engine.

--- a/Common/NaoBlocks.RobotState/NaoBlocks.RobotState.csproj
+++ b/Common/NaoBlocks.RobotState/NaoBlocks.RobotState.csproj
@@ -16,6 +16,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="System.Reactive" Version="5.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <ProjectReference Include="..\NaoBlocks.Common\NaoBlocks.Common.csproj" />
 	  <ProjectReference Include="..\NaoBlocks.Parser\NaoBlocks.Parser.csproj" />
 	</ItemGroup>
