Moved SocketListener into its own project

--- a/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -41,6 +41,7 @@
 		<ProjectReference Include="..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
 		<ProjectReference Include="..\Definitions\NaoBlocks.Definitions.Angular\NaoBlocks.Definitions.Angular.csproj" />
 		<ProjectReference Include="..\Definitions\NaoBlocks.Definitions.Tangibles\NaoBlocks.Definitions.Tangibles.csproj" />
+		<ProjectReference Include="..\NaoBlocks.Communications\NaoBlocks.Communications.csproj" />
 		<ProjectReference Include="..\NaoBlocks.Engine\NaoBlocks.Engine.csproj" />
 	</ItemGroup>
 
