--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Robots/nao/**/*.pyc
 Server/NaoBlocks.Web/wwwroot/packages/**/*.*
 Data/png/*.*
 Data/From_Unified/*.json
+Server/NaoBlocks.Web/logs/*.log
