--- a/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -9,6 +9,7 @@
 
 	<PropertyGroup>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<UserSecretsId>1e76e426-7fc8-47ab-9461-365f1584b302</UserSecretsId>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -31,6 +32,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="IronPdf" Version="2022.10.9622" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
