--- a/Server/NaoBlocks.Web/appsettings.json
+++ b/Server/NaoBlocks.Web/appsettings.json
@@ -11,5 +11,8 @@
   },
   "Security": {
     "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ"
+  },
+  "Addresses": {
+    "ListenOnLocalHost": true
   }
 }
