--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Server/NaoBlocks.Web/wwwroot/packages/**/*.*
 Data/png/*.*
 Data/From_Unified/*.json
 Server/NaoBlocks.Web/logs/*.log
+Tests/History/*.xml
