--- a/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
+++ b/Server/NaoBlocks.Web/NaoBlocks.Web.csproj
@@ -35,6 +35,7 @@
 		<PackageReference Include="IronPdf" Version="2022.11.10347" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+		<PackageReference Include="QRCoder" Version="1.4.3" />
 		<PackageReference Include="Serilog" Version="2.12.0" />
 		<PackageReference Include="Serilog.Enrichers.Environment" Version="2.2.0" />
 		<PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
