Added ability to generate robot quick links

--- a/Server/NaoBlocks.Web/appsettings.json
+++ b/Server/NaoBlocks.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "UseEmbedded": true
+    "UseEmbedded": true,
+    "EmbeddedServerUrl": "http://127.0.0.1:8091"
   },
   "Security": {
     "JwtSecret": "KK6}=ZcPD-C}Bb;PVr$kYX@L);>X?9H#=r>[#'7X/<E`Jc#P+vA=!Rr.H4mJ"
