--- a/Server/NaoBlocks.Engine/NaoBlocks.Engine.csproj
+++ b/Server/NaoBlocks.Engine/NaoBlocks.Engine.csproj
@@ -16,6 +16,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="WaterContracts.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>WaterContracts.tt</DependentUpon>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EPPlus" Version="6.1.0" />
     <PackageReference Include="IronPdf" Version="2022.11.10347" />
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="7.0.0" />
@@ -28,6 +36,25 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Common\NaoBlocks.Common\NaoBlocks.Common.csproj" />
     <ProjectReference Include="..\..\Common\NaoBlocks.Parser\NaoBlocks.Parser.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="WaterContracts.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>WaterContracts.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="WaterContracts.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>WaterContracts.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
