--- a/Clients/Angular/package.json
+++ b/Clients/Angular/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@tensorflow/tfjs": "^4.8.0",
     "@types/file-saver": "^2.0.4",
     "@zxing/ngx-scanner": "^3.8.0",
     "blockly": "github:google/blockly#7.20211209.2",
