"skipLibCheck": true in tsconfig.app.json due to tensorflow typing issues (can fix using @types/long)

--- a/Clients/Angular/tsconfig.app.json
+++ b/Clients/Angular/tsconfig.app.json
@@ -3,7 +3,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": ["@tensorflow/tfjs-core"],
+    "skipLibCheck": true
   },
   "files": [
     "src/main.ts",
